--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-.DS_Store
-=======
 .DS_Store
 *.pyc
 *.pyo
@@ -14,9 +11,5 @@ virtualenv
 *.sublime-project
 *.sublime-workspace
 
-/public
-.idea/
-.idea/*
 media/
-static/CACHE
->>>>>>> 3df36eb5a26cde03ff5aa10c18aa8dbf638fe81b
+CACHE/
