--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: no
 language: python
+python:
+  - 2.7
 install:
   - pip install -r requirements/production.txt
 script:
-  - python djangomx/manage.py test
+  - coverage run djangomx/manage.py test
+after_success:
+  coveralls
