--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - 2.7
 install:
   - pip install -r requirements/production.txt
+  - pip install coveralls
 script:
   - coverage run djangomx/manage.py test
 after_success:
