--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - 2.7
 install:
-  - pip install -r requirements/production.txt
+  - pip install -r requirements/development.txt
   - pip install coveralls
 script:
   - cd djangomx
