--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - pip install coveralls
 script:
   - cd djangomx
-  - coverage run manage.py test
+  - nosetests --with-coverage --with-fixture-bundling --cover-package=accounts,blog --verbosity=1
 after_success:
-  coveralls
+  - coveralls
