--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - pip install coveralls
 script:
   - cd djangomx
-  - coverage run manage.py test
+  - python manage.py test
 after_success:
-  coveralls
+  - coveralls
