--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,9 @@ django-markdown
 Pygments
 model-mommy==1.2.5
 django-gravatar2==1.3.0
+
+# Heroku
+dj-database-url==0.4.1
+psycopg2==2.6.1
+gunicorn==19.6.0
+whitenoise==3.2
